--- a/ThreeP/Modules/Trips/Components/TripGrid.razor
+++ b/ThreeP/Modules/Trips/Components/TripGrid.razor
@@ -38,8 +38,7 @@ else
             <PropertyColumn Property="x => x.Set.Name" Title="Set"/>
             <TemplateColumn Title="Set (Waga)">
                 <CellTemplate>
-                    @context.Item.Set?.Name
-                    (@context.Item.Set?.Weight kg)
+                    @($"{context.Item.Set?.Name} ({context.Item.Set?.Weight} kg")
                 </CellTemplate>
             </TemplateColumn>
             @* ACTIONS *@
@@ -63,13 +62,13 @@ else
 }
 
 @code {
-    [Parameter] public EventCallback<T> OnEdit { get; set; }
+    [Parameter] public EventCallback<(T? trip, bool isNew)> OnEdit { get; set; }
     [Parameter] public EventCallback<Guid?> OnDelete { get; set; }
     [Parameter] public List<T>? Items { get; set; }
     HashSet<T> selectedItems = [];
 
 
-    async Task Edit(CellContext<T?> context) => await OnEdit.InvokeAsync(context.Item);
+    async Task Edit(CellContext<T?> context) => await OnEdit.InvokeAsync((context.Item, false));
 
 
     async Task Delete(CellContext<T?> context)
@@ -79,7 +78,7 @@ else
     }
 
 
-    async Task OnCommit(T? arg) => await OnEdit.InvokeAsync(arg);
+    async Task OnCommit(T? arg) => await OnEdit.InvokeAsync((arg,false));
 
 
     void OnCancelEditing(T? item) => StateHasChanged();
