--- a/ThreeP/Modules/Sets/Pages/SetDetailsPage.razor
+++ b/ThreeP/Modules/Sets/Pages/SetDetailsPage.razor
@@ -34,8 +34,7 @@ else
         <MudItem xs="12" md="12">
 
             @* UPDATE *@
-            @* <ItemUpdate Item="item" ItemChanged="UpdateSet"/> *@
-            <Update T="Item" Titem="titem" ItemChanged="UpdateSet"/>
+            @* <Update T="Item" Titem="titem" ItemChanged="UpdateSet"/> *@
             
             <MVerticalSpacer/>
 
